XRDDEV-227: change Security Server's address from Security Server UI (#1867)
* feat: addressChange managing request definition

Refs: XRDDEV-227

* feat: entity, dto, mappers

Refs: XRDDEV-227

* feat: addressChange managing request processing on central server

Refs: XRDDEV-227

* feat: addressChange managing request processing on management-service

Refs: XRDDEV-227

* feat: CS: display address change management request in the list

Refs: XRDDEV-227

* feat: SS: endpoint to change server address

Refs: XRDDEV-227

* feat: address change management request

Refs: XRDDEV-227

* chore: fix after merge with develop

Refs: XRDDEV-227

* feat: signing the address change management request

Refs: XRDDEV-227

* feat: ss ui for changing address

Refs: XRDDEV-227

* docs: address change request docs update

Refs: XRDDEV-227

* feat: show status after ss address submitted change

Refs: XRDDEV-227

* chore: test-automation version up

Refs: XRDDEV-227

* test: Security Server system test for address change

Refs: XRDDEV-227

* chore: sonar fixes

Refs: XRDDEV-227

* chore: redundant line removed

Refs: XRDDEV-227

* chore: adding apt-get update in github actions workflow

Refs: XRDDEV-227